# auth-flask

./: README.md  app.py  check_env.py  init_db.py  pyproject.toml
infrastructure/: config.py
models/: __init__.py  user.py
routes/: register.py
routes/auth/: routes.py
routes/user/: routes.py
